--- a/BAPSPresenterNG/Channel.xaml
+++ b/BAPSPresenterNG/Channel.xaml
@@ -12,13 +12,19 @@
         <local:ChannelIDConverter x:Key="ChannelIDConverter" />
         <local:MsecToPositionStringConverter x:Key="MsecToPositionStringConverter" />
         <local:EntryTypeToIconConverter x:Key="EntryTypeToIconConverter" />
-        <GridLength x:Key="ChannelBarHeightGrid">32</GridLength>
-        <sys:Double x:Key="ChannelBarHeight">32</sys:Double>
+        <GridLength x:Key="ChannelBarHeightGrid">32<!-- px --></GridLength>
+        <sys:Double x:Key="ChannelBarHeight">32<!-- px --></sys:Double>
+        <Thickness x:Key="ChannelBarMargin">6px</Thickness>
+        <!-- ChannelBarHeight - (2*ChannelBarMargin) -->
+        <sys:Double x:Key="ChannelBarHeightMinusMargin">20</sys:Double>
         <!-- Tango colours (for now) -->
         <SolidColorBrush x:Key="PlayBrush" Color="#FF8AE234"></SolidColorBrush>
         <SolidColorBrush x:Key="PauseBrush" Color="#FFFCE94F"></SolidColorBrush>
         <SolidColorBrush x:Key="StopBrush" Color="#FFEF2929"></SolidColorBrush>
         <SolidColorBrush x:Key="ChannelLegendFgBrush" Color="#FFEEEEEC"></SolidColorBrush>
+        <SolidColorBrush x:Key="ChannelLegendLampOut" Color="#FF888a85"></SolidColorBrush>
+        <SolidColorBrush x:Key="ChannelLegendLampOn" Color="#FFEEEEEC"></SolidColorBrush>
+        <SolidColorBrush x:Key="ChannelLegendLampAlt" Color="#FFEF2929"></SolidColorBrush>
         <SolidColorBrush x:Key="ChannelLegendBgBrush" Color="#FF2E3436"></SolidColorBrush>
         <SolidColorBrush x:Key="PositionLegendFgBrush" Color="#FFEEEEEC"></SolidColorBrush>
         <SolidColorBrush x:Key="PositionDisplayBgBrush" Color="#FFD3D7CF"></SolidColorBrush>
@@ -43,10 +49,16 @@
             <Setter Property="CornerRadius" Value="5"/>
             <Setter Property="Background" Value="{StaticResource PositionDisplayBgBrush}"/>
         </Style>
+        <Style x:Key="ChannelLampStyle" TargetType="{x:Type fa:ImageAwesome}">
+            <Setter Property="Height" Value="{StaticResource ChannelBarHeightMinusMargin}"/>
+            <Setter Property="Width" Value="{StaticResource ChannelBarHeightMinusMargin}"/>
+            <Setter Property="Margin" Value="{StaticResource ChannelBarMargin}"/>
+            <Setter Property="Foreground" Value="{StaticResource ChannelLegendLampOut}"/>
+        </Style>
         <Style x:Key="ChannelButtonStyle" TargetType="{x:Type Button}">
             <Setter Property="Height" Value="{StaticResource ChannelBarHeight}"/>
             <Setter Property="Width" Value="{StaticResource ChannelBarHeight}"/>
-            <Setter Property="Padding" Value="2pt"/>
+            <Setter Property="Padding" Value="{StaticResource ChannelBarMargin}"/>
         </Style>
     </UserControl.Resources>
     <Grid>
@@ -63,21 +75,66 @@
             <ColumnDefinition />
             <ColumnDefinition />
         </Grid.ColumnDefinitions>
-        <Label Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" Name="nameLbl"
+        <DockPanel Background="{StaticResource ChannelLegendBgBrush}"
+                   Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="3" Name="channelLegend">
+            <StackPanel DockPanel.Dock="Right" Name="channelControlsPanel"
+                    Background="{StaticResource ChannelLegendBgBrush}"
+                    Orientation="Horizontal"
+                    FlowDirection="RightToLeft">
+                <fa:ImageAwesome Name="repeatLamp"
+                             Icon="Repeat"
+                             ToolTip="Repeat mode">
+                    <fa:ImageAwesome.Style>
+                        <Style TargetType="{x:Type fa:ImageAwesome}"
+                           BasedOn="{StaticResource ChannelLampStyle}">
+                            <Style.Triggers>
+                                <DataTrigger Binding="{Binding Path=RepeatMode}" Value="All">
+                                    <Setter Property="Foreground" Value="{StaticResource ChannelLegendLampAlt}" />
+                                </DataTrigger>
+                                <DataTrigger Binding="{Binding Path=RepeatMode}" Value="One">
+                                    <Setter Property="Foreground" Value="{StaticResource ChannelLegendLampOn}" />
+                                </DataTrigger>
+                            </Style.Triggers>
+                        </Style>
+                    </fa:ImageAwesome.Style>
+                </fa:ImageAwesome>
+                <fa:ImageAwesome Name="autoAdvanceLamp"
+                             Icon="AngleDoubleDown"
+                             ToolTip="Auto Advance">
+                    <fa:ImageAwesome.Style>
+                        <Style TargetType="{x:Type fa:ImageAwesome}"
+                           BasedOn="{StaticResource ChannelLampStyle}">
+                            <Style.Triggers>
+                                <DataTrigger Binding="{Binding Path=IsAutoAdvance}" Value="true">
+                                    <Setter Property="Foreground" Value="{StaticResource ChannelLegendLampOn}" />
+                                </DataTrigger>
+                            </Style.Triggers>
+                        </Style>
+                    </fa:ImageAwesome.Style>
+                </fa:ImageAwesome>
+                <fa:ImageAwesome Name="playOnLoadLamp"
+                             Icon="PlayCircleOutline"
+                             ToolTip="Play on load">
+                    <fa:ImageAwesome.Style>
+                        <Style TargetType="{x:Type fa:ImageAwesome}"
+                           BasedOn="{StaticResource ChannelLampStyle}">
+                            <Style.Triggers>
+                                <DataTrigger Binding="{Binding Path=IsPlayOnLoad}" Value="true">
+                                    <Setter Property="Foreground" Value="{StaticResource ChannelLegendLampOn}" />
+                                </DataTrigger>
+                            </Style.Triggers>
+                        </Style>
+                    </fa:ImageAwesome.Style>
+                </fa:ImageAwesome>
+            </StackPanel>
+            <Label Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" Name="nameLbl"
                FontWeight="Bold"
                Background="{StaticResource ChannelLegendBgBrush}"
                Foreground="{StaticResource ChannelLegendFgBrush}"
                >
-            <TextBlock FontSize="14pt" VerticalAlignment="Center">Channel <TextBlock Text="{Binding ChannelID, Converter={StaticResource ChannelIDConverter}}" /></TextBlock>
-        </Label>
-        <StackPanel Grid.Row="0" Grid.Column="2" Grid.ColumnSpan="1" Name="channelControlsPanel"
-                    Background="{StaticResource ChannelLegendBgBrush}"
-                    Orientation="Horizontal"
-                    FlowDirection="RightToLeft">
-            <Button Style="{StaticResource ChannelButtonStyle}">
-                <fa:ImageAwesome Icon="Commenting"/>
-            </Button>
-        </StackPanel>
+                <TextBlock FontSize="14pt" VerticalAlignment="Center">Channel <TextBlock Text="{Binding ChannelID, Converter={StaticResource ChannelIDConverter}}" /></TextBlock>
+            </Label>
+        </DockPanel>
         <ListBox Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="3" Name="trackList"
                  ItemsSource="{Binding TrackList,UpdateSourceTrigger=PropertyChanged}"
                  
